# event-planner

./: db.sqlite3  main.py  pyproject.toml
authentication/: urls.py  views.py
django_project/: settings.py  urls.py
home/: urls.py  views.py
static/css/: style.css
templates/: index.html
templates/authentication/: index.html  signin.html  signup.html
