[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-tailwind-postcss = "^0.12.0"
"django-scribbler-django2.0" = "^0.9.3"
[tool.poetry.dev-dependencies]
